--- a/packages/react-native-device-activity/package.json
+++ b/packages/react-native-device-activity/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-native-device-activity",
-  "version": "0.5.0",
+  "version": "0.5.7",
   "description": "Provides access to Apples DeviceActivity API",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
+    "pack-local": "HUSKY=0 npm i --ignore-scripts --legacy-peer-deps --no-audit --no-fund && npm run build && (test -f app.plugin.js || cp dist/app.plugin.js app.plugin.js) && PKG=$(npm pack | tail -n1) && rm -f react-native-device-activity-local.tgz && mv \"$PKG\" react-native-device-activity-local.tgz && echo 'Wrote react-native-device-activity-local.tgz'",
     "build": "expo-module build",
     "clean": "expo-module clean",
     "lint": "expo-module lint",
