--- a/apps/example/package.json
+++ b/apps/example/package.json
@@ -18,7 +18,7 @@
     "expo-notifications": "~0.29.14",
     "react": "18.3.1",
     "react-native": "0.76.9",
-    "react-native-device-activity": "workspace:*",
+    "react-native-device-activity": "*",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-vector-icons": "^10.2.0"
